manifests/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: demo
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      imagePullSecrets:
        - name: ghcr
      containers:
        - name: demo
          image: ghcr.io/c4geeks/rollouts-demo:v1
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 2
            periodSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 32Mi
            limits:
              memory: 128Mi
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo-stable
      trafficRouting:
        alb:
          ingress: rollouts-demo
          rootService: rollouts-demo-root
          servicePort: 80
      steps:
        - setWeight: 20
        - analysis: &gate
            templates:
              - templateName: success-rate
            args:
              - name: canary-service
                value: rollouts-demo-canary
        - setWeight: 40
        - analysis: *gate
        - setWeight: 60
        - analysis: *gate
        - setWeight: 80
        - analysis: *gate
